--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jeff Blackman</title>
+    <title>Dash McCoy</title>
 
 
 
@@ -55,16 +55,20 @@
 
       <section class="page-header">
         <div class="col-xs-6 col-md-4">
-        <h1 class="project-name">Jeff Blackman</h1>
-        <img src="jeff copy.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
-        <p class=profile>Email: Enzoooo@gmail.com <span class="glyphicon glyphicon-envelope"></span></p>
-        <p class="profile">Phone Number: 314-333-5924</p>
+        <h1 class="project-name">Dash McCoy</h1>
+        <img src="Dash copy.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
+        <p class=profile>Email: dmccoy@yahoo.com <span class="glyphicon glyphicon-envelope"></span></p>
+        <p class="profile">Phone Number: 314-666-2823</p>
       </div>
       <div class="col-xs-12 col-md-8">
         <br>
         <br>
         <br>
-        <p class="lead">My name is Enzo. Ever since a young age I have had a passion for watching and caring for children. As the oldest of all of my cousins it was always my duty to take care of the people younger than me. I have had experience in babysitting/house sitting for over a decade, as well as private art and Japanese tutoring over the course of a few years. I am an artist and thoroughly enjoy helping kids reach their full creative potential. My previous job was at a children's clothing store.</p>
+        <p class="lead">My name is Dash, thank you for reviewing my profile. I moved from Soviet Union 12 years ago, and I am now a U. S. citizen.
+       I have raised my 24-year-old daughter whom is attending College in Rolla. I have assisted in caring for my husbands 10 grandchildren.
+       I love caring for children, especially girls. I am active, energetic, and I enjoy staying busy.I enjoy being outside, taking walks, cooking , yoga, singing, music, crafts, sewing, and crochet.
+       I like reading books to children, playing with puzzles, play ball, and going to the park. I also love animals, and enjoy caring for pets.
+       I am currently taking classes at St. Louis Community College to earn my degree.</p>
          </div>
 
        </div>
@@ -78,9 +82,9 @@
           <hr>
 
           <h2>Parent reviews</h2>
-          <li class="padding"> "Enzo is serious and professional, he knows his craft very well and your kids will respect him</li>
-          <li class="padding"> "He was kind of weird but he did a good job"</li>
-          <li class="padding"> My kids loved his chicken fingers...LITTLE DID THEY KNOW IT WAS TOFU!. Ohhh Enzo you're sneaky but at least they're eating healthy. Great Nanny--would definitely recommend."</li>
+          <li class="padding"> Dash has crazy cat lady vibes but she means well."</li>
+          <li class="padding"> "When I came home Dash was applying urine to a cut my child received on her scooter. Though I'm glad she sterylized the wound she should be prepared for a situation like this with a first aid kit. I probably wouldn't hire her."</li>
+          <li class="padding"> "She thought my child was too old to still be using a pacifier so she dipped it in tobasco. My child doesn't use a pacifier anymore. I guess it's for the best."</li>
           <!-- <li class= "padding"> "He showed up to our residence with CPR certification. I knew right then that my kids were safe on my night out. Hire this man for the peace of mind!"</li> -->
 
         </ul>
